# rust-discord-bot

./: .gitignore  :w  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: commands.rs
src/commands/normal/: verify.rs
src/commands/slash/: clear.rs  memes.rs  setup.rs  slashembed.rs
src/utils/: utils.rs
