[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", features = ["collector", "unstable_discord_api"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
reqwest = "0.11.9"
serde_json = "1.0.79"
rand = "0.8.5"
